scripts/pan-cn-ngfw.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pan-ngfw-dep
  namespace: kube-system
  labels:
      app: pan-ngfw
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: pan-ngfw
  # min replicas set to 2
  replicas: 2
  template:
    metadata:
      labels:
        app: pan-ngfw
      annotations:
          # Application Pods and Namespaces with annotation
          #     paloaltonetworks.com/firewall: pan-fw*
          # will be secured when this daemonset is running with exact same
          # annotation on the node. The value must start with "pan-fw" as prefix
          # This needs to be in the list of "firewall" in pan-cni-configmap.yaml
          paloaltonetworks.com/firewall: pan-fw

          # Below annotation is always fixed and is used to detect this Deployment.
          #     paloaltonetworks.com/app: pan-fw
          paloaltonetworks.com/app: pan-fw

          # If multus CNI is present, this annotation is needed to enable
          # pan-cni CNI plugin for this pod, otherwise no impact.
          k8s.v1.cni.cncf.io/networks: pan-cni
    spec:
      priorityClassName: system-cluster-critical
      # Minimize downtime during a rolling upgrade or deletion; Can tell Kubernetes
      # to do a "force deletion": 
      # https://kubernetes.io/docs/concepts/workloads/pods/pod/#termination-of-pods
      # but for now allowing 10 seconds to do graceful removal of the slots by 
      # sending dereg to PAN-MGMT
      terminationGracePeriodSeconds: 10
      hostAliases:
      # Internal IP address of ipsec0 interface on MGMT pod
      - ip: "169.254.202.1"
        hostnames:
          - mgmt
      #nodeSelector:  
      #  firewall: pan-ngfw-ds
      containers:
        - name: pan-ngfw-container
          image: salsop/panos_cn_ngfw:10.2.1
          #image: gcr.io/itp-ext-cnseries/10.2.0/panos_cn_ngfw:latest
          command: ["/sbin/pan_start","newnns","nspan-fw","eac8617ee91"]
          lifecycle:
            preStop:
              exec:
                command: ["/bin/bash","-c","/sbin/pan_command pan_shutdown"]
          readinessProbe:
            exec:
              command: ["/sbin/pan_ready_check"]
            initialDelaySeconds: 15
            periodSeconds: 2
            failureThreshold: 1
            successThreshold: 2
          livenessProbe:
            exec:
              command: ["/sbin/pan_alive_check"]
            initialDelaySeconds: 600 #covers image download and panos start
            periodSeconds: 5
            # liveness is still the indicator of the container's health.
            failureThreshold: 2
          imagePullPolicy: Always
          securityContext:
            capabilities:
              #add: ["NET_ADMIN","NET_RAW","NET_BROADCAST","NET_BIND_SERVICE"]
              add: ["ALL"]
          resources:
            requests:
              # configurable based on desired throughput, number of running pods
              cpu: "1"
              memory: "4Gi"
            limits:
              cpu: "1"
              memory: "4Gi"
          volumeMounts:
          - mountPath: /opt/appinfo
            name: appinfo
          - mountPath: /opt/pan-cni-ready
            name: pan-cni-ready
          - mountPath: /dev/net/tun
            name: devnettun
            readOnly: false
          - mountPath: /dev/shm
            name: dshm
          - mountPath: /etc/pan-fw-sw
            name: sw-secret
          # Optional for custom cert
          - name: pancustomca
            mountPath: /etc/custom-ca
      volumes:
      - name: devnettun
        hostPath:
          path: /dev/net/tun
      - name: dshm
        emptyDir:
          medium: Memory
      - name: appinfo
        hostPath:
          # app pod info's directory location on host
          # below path should match pan-cni's "appinfo" volume and 
          # "appinfo_dir" configmap and pan-ngfw-ds's part of "pan-cni-ready" volume
          path: /var/log/pan-appinfo
          type: Directory
      - name: pan-cni-ready
        hostPath:
          # block pan-ngfw-ds scheduling till PAN CNI plugin insertion on the node
          path: /var/log/pan-appinfo/pan-cni-ready
          type: Directory
      - name: sw-secret
        secret:
          # Don't change this. Needs to match PAN_DP_NAME in pan-cn-mgmt.yaml
          # followed by suffix "-sw". Also hard-coded in ipsec.conf
          secretName: pan-fw-sw
      # Optional for custom cert - Pass custom CA cert as a secret with file name ca.crt
      - name: pancustomca
        secret:
          secretName: custom-ca-secret
          optional: true
