scripts/pan-cn-mgmt.yaml
apiVersion: v1
kind: Service
metadata:
  name: pan-mgmt-svc
  namespace: kube-system
  labels:
    app: pan-mgmt-svc
spec:
  ports:
  - protocol: UDP
    port: 4500
    name: ipsec
  selector:
    appname: pan-mgmt-sts
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pan-mgmt-sts
  namespace: kube-system
spec:
  selector:
    matchLabels:
      appname: pan-mgmt-sts
  serviceName: pan-mgmt-svc
  # Replicas are for fault-tolerance. Max 2 replicas supported.
  replicas: 2
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: pan-mgmt
        appname: pan-mgmt-sts
      annotations:
          paloaltonetworks.com/app: pan-mgmt
    spec:
      serviceAccountName: pan-mgmt-sa
      priorityClassName: system-node-critical
      #terminationGracePeriodSeconds: 60 //for graceful exit of prestop hook
      # Turn on podAntiAffinity to schedule replicas on separate nodes
      # Turn off podAntiAffinity to allow scheduling of both replicas on a single node
      affinity:
       podAntiAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
           - labelSelector:
               matchExpressions:
                 - key: "appname"
                   operator: In
                   values:
                   - pan-mgmt-sts
             topologyKey: "kubernetes.io/hostname"
      containers:
        - name: pan-mgmt
          image: salsop/panos_cn_mgmt:10.2.1
          #image: gcr.io/itp-ext-cnseries/10.2.0/panos_cn_mgmt:latest
          #image: us.gcr.io/panw-gcp-team-testing/paloaltonetworks/panos_cn_mgmt:10.1.2
          terminationMessagePolicy: FallbackToLogsOnError
          command: ["/sbin/pan_start"]
          lifecycle:
            preStop:
              exec:
                command: ["/sbin/pan_shutdown"]
          readinessProbe:
            exec:
              command: ["/sbin/pan_ready_check"]
            initialDelaySeconds: 30
            periodSeconds: 2
            failureThreshold: 2
            successThreshold: 2
          livenessProbe:
            exec:
              command: ["/sbin/pan_alive_check"]
            initialDelaySeconds: 600 #covers image download and panos start
            periodSeconds: 5
            failureThreshold: 2
          imagePullPolicy: Always
          securityContext:
            privileged: true
            capabilities:
              add: ["ALL"]
          resources:
            requests:
              # configurable based on desired logging, capacities
              cpu: "2"
              memory: "2.0Gi"
            limits:
              cpu: "4"
              memory: "4.0Gi"
          volumeMounts:
          - name: panlogs
            mountPath: /opt/panlogs/
          - name: varlogpan
            mountPath: /var/log/pan/
          - name: varcores
            mountPath: /var/cores/
          - name: panconfig
            mountPath: /opt/pancfg/
          - name: panplugins
            mountPath: /opt/plugins/installed/
          - name: panplugincfg
            mountPath: /opt/pancfg/mgmt/plugins/
          - name: panplugincfg
            mountPath: /opt/plugins/opt/pancfg/mgmt/plugins/
          - mountPath: /dev/shm
            name: dshm
          # Optional for custom cert
          - name: pancustomca
            mountPath: /etc/custom-ca
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
      # Optional for custom cert - Pass custom CA cert as a secret with file name ca.crt
      - name: pancustomca
        secret:
          secretName: custom-ca-secret
          optional: true
  volumeClaimTemplates:
  - metadata:
      name: panlogs
    spec:
      #storageClassName: pan-cn-storage-class //For better disk iops performance for logging
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 20Gi #Change this to 200Gi while using storageClassName for better iops
  - metadata:
      name: varlogpan
    spec:
      #storageClassName: pan-cn-storage-class //For better disk iops performance for dp logs
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 20Gi #Change this to 200Gi while using storageClassName for better iops
  - metadata:
      name: varcores
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
  - metadata:
      name: panplugincfg
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
  - metadata:
      name: panconfig
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 8Gi
  - metadata:
      name: panplugins
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 200Mi
