scripts/Z_allow_all_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: untitled-policy
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector: {}
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
  egress:
    - to:
        - podSelector: {}
    - to:
        - namespaceSelector: {}
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
